Prevent long horizontal scrolling.

--- a/asset/scss/legacies.scss
+++ b/asset/scss/legacies.scss
@@ -56,6 +56,7 @@ header.main {
   padding: $global-padding;
   flex-wrap: wrap;
   width: 100%;
+  overflow: hidden;
 }
 
 .desktop {
